--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,52 @@ ul li h5 {
 }
 
 
+/* Large desktop */
+@media (min-width: 1200px) {
+	#weather {
+		width: 75%;
+	}
+	#inputs {
+		width: 75%;
+	}
+}
+ 
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) {
+	#weather {
+		width: 75%;
+		font-size: 75%;
+		line-height: 20px;
+	}
+	#inputs {
+		width: 75%;
+	}
+}
+ 
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {
+	#weather {
+		width: 75%;
+		font-size: 75%;
+		line-height: 20px;
+	}
+	#inputs {
+		width: 75%;
+	}
+}
+ 
+/* Landscape phones and down */
+@media (max-width: 480px) {
+	#weather {
+		width: 75%;
+		font-size: 75%;
+		line-height: 20px;
+	}
+	#inputs {
+		width: 75%;
+	}
+}
+
 
 
 
