--- a/css/styles.css
+++ b/css/styles.css
@@ -5,14 +5,14 @@ body {
 
 #weather {
   width: 960px;
-  margin: 50px auto;
+  margin: 25px auto;
   text-align: center;
   text-transform: uppercase;
 }
 
 #weather h2,
 #weather h3 {
-  margin: 80px 0 8px;
+  margin: 50px 0 8px;
   color: #fff;
   font-size: 7em;
   font-weight: 300;
@@ -68,6 +68,7 @@ ul li h5 {
 @media (min-width: 1200px) {
 	#weather {
 		width: 75%;
+		margin-top: 25px;
 	}
 	#inputs {
 		width: 75%;
@@ -78,6 +79,7 @@ ul li h5 {
 @media (min-width: 768px) and (max-width: 979px) {
 	#weather {
 		width: 75%;
+		margin-top: 25px;
 	}
 	#inputs {
 		width: 75%;
@@ -109,6 +111,7 @@ ul li h5 {
 @media (max-width: 767px) {
 	#weather {
 		width: 50%;
+		margin-top: 25px;
 	}
 	
 	#inputs {
